--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhclient.conf.5,v 1.23 2009/01/22 21:22:42 dhankins Exp $
+.\"	$Id: dhclient.conf.5,v 1.24 2009/03/13 21:41:45 dhankins Exp $
 .\"
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -583,7 +583,6 @@ the subnet, counting the number of significant bits in the netmask starting
 from the leftmost end.  Example configuration syntax:
 .PP
 .I \fIreject\fR 192.168.0.0\fB/\fR16\fB,\fR 10.0.0.5\fB;\fR
-.RE
 .PP
 The above example would cause offers from any server identifier in the
 entire RFC 1918 "Class C" network 192.168.0.0/16, or the specific
@@ -659,6 +658,30 @@ database and will record the media type used to acquire the address.
 Whenever the client tries to renew the lease, it will use that same
 media type.   The lease must expire before the client will go back to
 cycling through media types.
+.PP
+ \fBhardware\fR \fIlink-type mac-address\fR\fB;\fR
+.PP
+The
+.B hardware
+statement defines the hardware MAC address to use for this interface,
+for DHCP servers or relays to direct their replies.  dhclient will determine
+the interface's MAC address automatically, so use of this parameter
+is not recommended.  The \fIlink-type\fR corresponds to the interface's
+link layer type (example: 'ethernet'), while the \fImac-address\fR is
+a string of colon-separated hexadecimal values for octets.
+.PP
+ \fBanycast-mac\fR \fIlink-type mac-address\fR\fB;\fR
+.PP
+The
+.B anycast-mac
+statement over-rides the all-ones broadcast MAC address dhclient will use
+when it is transmitting packets to the all-ones limited broadcast IPv4
+address.  This configuration parameter is useful to reduce the number of
+broadcast packets transmitted by DHCP clients, but is only useful if you
+know the DHCP service(s) anycast MAC address prior to configuring your
+client.  The \fIlink-type\fR and \fImac-address\fR parameters are configured
+in a similar manner to the \fBhardware\fR statement.
+.PP
 .SH SAMPLE
 The following configuration file is used on a laptop running NetBSD
 1.3.   The laptop has an IP alias of 192.5.5.213, and has one
@@ -678,6 +701,7 @@ reject 192.33.137.209;
 
 interface "ep0" {
     send host-name "andare.fugue.com";
+    hardware ethernet 00:a0:24:ab:fb:9c;
     send dhcp-client-identifier 1:0:a0:24:ab:fb:9c;
     send dhcp-lease-time 3600;
     supersede domain-name "fugue.com rc.vix.com home.vix.com";
