--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 4.0.1
-			   December 23, 2008
+			     Version 4.0.2b1
+			     April 30, 2009
 
 			      README FILE
 
@@ -91,9 +91,8 @@ will not be correct for your operating system until after you iterate
 directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
-
-This is the FIRST RELEASE CANDIDATE of ISC DHCP 4.0.1, a maintenance
-release that addresses bugs in ISC DHCP versions 4.0.0 and prior.
+This is ISC DHCP 4.0.2b1, the FIRST BETA of a maintenance release
+that addresses bugs in ISC DHCP versions 4.0.1 and prior.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -129,12 +128,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.0.1.tar.gz
-	tar xvf dhcp-4.0.1.tar
+	gunzip dhcp-4.0.2b1.tar.gz
+	tar xvf dhcp-4.0.2b1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.0.1 subdirectory that you've just created and
+Now, cd to the dhcp-4.0.2b1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
