--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		            Version 4.1.0pl1
-			      19 June 2009
+		             Version 4.1.0p1
+			      22 June 2009
 
 			      README FILE
 
@@ -94,7 +94,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1.0pl1, a PATCH release which addresses a security
+This is ISC DHCP 4.1.0p1, a PATCH release which addresses a security
 problem with the DHCPv4 client ('dhclient') included in ISC DHCP 4.1.0.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
@@ -131,12 +131,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1.0pl1.tar.gz
-	tar xvf dhcp-4.1.0pl1.tar
+	gunzip dhcp-4.1.0p1.tar.gz
+	tar xvf dhcp-4.1.0p1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1.0pl1 subdirectory that you've just created and
+Now, cd to the dhcp-4.1.0p1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
