--- a/common/dhcp-eval.5
+++ b/common/dhcp-eval.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhcp-eval.5,v 1.27 2007/06/07 15:52:29 dhankins Exp $
+.\"	$Id: dhcp-eval.5,v 1.28 2009/07/06 23:29:51 dhankins Exp $
 .\"
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -245,6 +245,16 @@ the packet to which the server is responding.
 .RS 0.25i
 The \fBconfig-option\fR operator returns the value for the specified option
 that the DHCP client or server has been configured to send.
+.RE
+.PP
+.B gethostname()
+.PP
+.RS 0.25i
+The \fBgethostname()\fR function returns a data string whose contents are a
+character string, the results of calling gethostname() on the local
+system with a size limit of 255 bytes (not including NULL terminator).  This
+can be used for example to configure dhclient to send the local hostname
+without knowing the local hostname at the time dhclient.conf is written.
 .RE
 .PP
 .B hardware
