--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,6 +1,6 @@
-.\"	$Id: dhclient.conf.5,v 1.17.84.4 2009/07/23 21:43:33 sar Exp $
+.\"	$Id: dhclient.conf.5,v 1.17.84.5 2009/09/01 20:32:27 dhankins Exp $
 .\"
-.\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2007,2009 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -28,7 +28,7 @@
 .\" see ``http://www.vix.com''.   To learn more about Nominum, Inc., see
 .\" ``http://www.nominum.com''.
 .\"
-.\" $Id: dhclient.conf.5,v 1.17.84.4 2009/07/23 21:43:33 sar Exp $
+.\" $Id: dhclient.conf.5,v 1.17.84.5 2009/09/01 20:32:27 dhankins Exp $
 .\"
 .TH dhclient.conf 5
 .SH NAME
