--- a/server/dhcpd.leases.5
+++ b/server/dhcpd.leases.5
@@ -1,6 +1,6 @@
 .\"	dhcpd.leases.5
 .\"
-.\" Copyright (c) 2004 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2009 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -28,7 +28,7 @@
 .\" see ``http://www.vix.com''.   To learn more about Nominum, Inc., see
 .\" ``http://www.nominum.com''.
 .\"
-.\" $Id: dhcpd.leases.5,v 1.11.60.2 2009/07/23 21:43:35 sar Exp $
+.\" $Id: dhcpd.leases.5,v 1.11.60.3 2009/09/01 20:32:28 dhankins Exp $
 .\"
 .TH dhcpd.leases 5
 .SH NAME
