--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 3.1.3b1
-			    September 1, 2009
+			     Version 3.1.3rc1
+			    September 17, 2009
 
 			      README FILE
 
@@ -92,7 +92,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is the FIRST BETA release of ISC DHCP 3.1.3, a maintenance release
+This is the FIRST RELEASE CANDIDATE of ISC DHCP 3.1.3, a maintenance release
 that seeks only to fix bugs present in ISC DHCP 3.1.2 or prior, and
 provides no new features.
 
@@ -137,12 +137,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-3.1.3b1.tar.gz
-	tar xvf dhcp-3.1.3b1.tar
+	gunzip dhcp-3.1.3rc1.tar.gz
+	tar xvf dhcp-3.1.3rc1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-3.1.3b1 subdirectory that you've just created and
+Now, cd to the dhcp-3.1.3rc1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
