--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		             Version 4.1.1b2
-			      24 July 2009
+		             Version 4.1.1b3
+			      7 October 2009
 
 			      README FILE
 
@@ -94,9 +94,10 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1.1b2, the SECOND BETA of a maintenance release which
-fixes bugs present in ISC DHCP 4.1.0 or prior.  A security vulnerability
-in the ISC DHCP Client ('dhclient') is included in this release.
+This is ISC DHCP 4.1.1b3, the THIRD BETA of a maintenance release which
+fixes bugs present in ISC DHCP 4.1.0 or prior.  A fix for a security
+vulnerability in the ISC DHCP Client ('dhclient') was included in 4.1.1b2
+and is included in this release.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -132,12 +133,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1.1b2.tar.gz
-	tar xvf dhcp-4.1.1b2.tar
+	gunzip dhcp-4.1.1b3.tar.gz
+	tar xvf dhcp-4.1.1b3.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1.1b2 subdirectory that you've just created and
+Now, cd to the dhcp-4.1.1b3 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
