--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
 			      Version 4.2.0a1
-			      24 November 2009
+			      2 December 2009
 
 			      README FILE
 
@@ -94,8 +94,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.2.0a1, which adds new DHCPv6 features omitted from
-ISC DHCP 4.0.0.
+This is ISC DHCP 4.2.0a1, which modifies the DDNS code to be asynchronous.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -134,17 +133,6 @@ the tar utility and the gzip command - type something like:
 	gunzip dhcp-4.2.0a1.tar.gz
 	tar xvf dhcp-4.2.0a1.tar
 
-			    BUILDING BIND LIBRARIES
-
-To build the BIND libraries used by DHCP cd to the dhcp-4.2.0a1 subdirectory
-that you've just created and run the bindcus.sh from the the util 
-subdirectory - something like this:
-	
-	sh util/bindcus.sh
-
-In order to build the necessary libraries you will need to have "gmake"
-available on your build system.
-
 			    CONFIGURING IT
 
 Now, cd to the dhcp-4.2.0a1 subdirectory that you've just created and
@@ -162,7 +150,11 @@ your own.
 
 A fully-featured implementation of dynamic DNS updates is included in
 this release.  It uses libraries from BIND and, to avoid issues with
-different versions, includes the necessary BIND version.
+different versions, includes the necessary BIND version.  The appropriate
+BIND libraries will be compiled and installed in the bind subdirectory
+as part of the make step.  In order to build the necessary libraries you
+will need to have "gmake" available on your build system.
+
 
 There is documentation for the DDNS support in the dhcpd.conf manual
 page - see the beginning of this document for information on finding
