--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,6 +1,7 @@
-.\"	$Id: dhclient.conf.5,v 1.22.64.3 2009/07/23 19:02:09 sar Exp $
+.\"	$Id: dhclient.conf.5,v 1.22.64.4 2010/04/26 21:26:08 sar Exp $
 .\"
-.\" Copyright (c) 2004,2007,2009 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2010 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
@@ -234,7 +235,7 @@ The send statement causes the client to send the specified options to
 the server with the specified values.  These are full option
 declarations as described in \fBdhcp-options(5)\fR.  Options that are
 always sent in the DHCP protocol should not be specified here, except
-that the client can specify a \fBrequested-lease-time\fR option other
+that the client can specify a requested \fBdhcp-lease-time\fR option other
 than the default requested lease time, which is two hours.  The other
 obvious use for this statement is to send information to the server
 that will allow it to differentiate between this client and other
