--- a/README
+++ b/README
@@ -138,7 +138,7 @@ the tar utility and the gzip command - type something like:
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1.1 subdirectory that you've just created and
+Now, cd to the dhcp-4.1.1-P1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
