--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 4.0.2
-			    19 January 2010
+			     Version 4.0.2-P1
+			        4 May 2010
 
 			      README FILE
 
@@ -92,10 +92,10 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.0.2, the production release of a maintenance
-release that addresses bugs in ISC DHCP versions 4.0.1 and prior.  A
-correction for a security vulnerability in ISC DHCP Client ('dhclient')
-is included in this release.
+This is ISC DHCP 4.0.2-P1, a patch release which fixes a bug that could
+cause the DHCPv6 server to advertise/assign a previously allocated
+(active) lease to a client that has changed subnets, despite being
+on different shared networks.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -131,12 +131,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.0.2.tar.gz
-	tar xvf dhcp-4.0.2.tar
+	gunzip dhcp-4.0.2-P1.tar.gz
+	tar xvf dhcp-4.0.2-P1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.0.2 subdirectory that you've just created and
+Now, cd to the dhcp-4.0.2-P1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
