--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			    Version 4.2.0b2
-			      3 June 2010
+			    Version 4.2.0rc1
+			      24 June 2010
 
 			      README FILE
 
