--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
 			    Version 4.2.0rc1
-			      24 June 2010
+			      25 June 2010
 
 			      README FILE
 
@@ -94,7 +94,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.2.0b2, a BETA quality release containing new
+This is ISC DHCP 4.2.0rc1, a RELEASE CANDIDATE release containing new
 features.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
@@ -131,12 +131,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.2.0b2.tar.gz
-	tar xvf dhcp-4.2.0b2.tar
+	gunzip dhcp-4.2.0rc1.tar.gz
+	tar xvf dhcp-4.2.0rc1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.2.0b2 subdirectory that you've just created and
+Now, cd to the dhcp-4.2.0rc1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
